# tictactoe-course

./: .gitignore  CMakeLists.txt
.github/workflows/: gtest.yml
src/player/: board_utils.hpp  engine_config.hpp  incremental_evaluator.cpp  incremental_evaluator.hpp  instant_move_checker.cpp  instant_move_checker.hpp  move_combination_table.hpp  move_generator.cpp  move_generator.hpp  move_ordering.cpp  move_ordering.hpp  my_observer.cpp  my_observer.hpp  my_player.cpp  my_player.hpp  negamax_search.cpp  negamax_search.hpp  negamax_searcher.cpp  negamax_searcher.hpp  pattern_table.cpp  pattern_table.hpp  position_evaluator.cpp  position_evaluator.hpp  search_board.cpp  search_board.hpp  search_state.cpp  search_state.hpp  threat_types.hpp  zobrist.cpp  zobrist.hpp
tests/: CMakeLists.txt  test_incremental_evaluator.cpp  test_instant_move_checker.cpp  test_move_generator.cpp  test_move_ordering.cpp  test_negamax_search.cpp  test_position_evaluator.cpp  test_search_board.cpp  test_stats_vs_baseline.cpp
